<resources>
    <string name="app_name">android_saa</string>
    <string name="str_instagram">Instagram</string>
    <string name="str_fullname">Fullname</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_cpassword">Confirm Password</string>
    <string name="str_signin">Sign In</string>
    <string name="str_signup">Sign Up</string>
    <string name="str_already_account">Already have an account?</string>
    <string name="str_donot_account">Don`t have an account?</string>
    <string name="post">Post</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
</resources>