<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/icon_history"
        android:title="@string/history" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/more"
        android:title="@string/post" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/heart"
        android:title="@string/favorite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/profile" />


</menu>